# A-BERT-model-from-pathology-synopses

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  acl.py  active.py  chordDia.R  data_size.py  demo_BERT_active_learning.ipynb  eval.py  export.py  feedback.py  lab_collect.py  main.py  make_cmd.py  make_dataset.py  make_embed.py  make_evaluation.py  make_exp.py  make_train.py  pred.py  predict.py  pyproject.toml  pytest.ini  random_stdds.py  replay.py  train.py
plot_scripts/: acl.py  plot_ac_compare.py  plot_chord.py  plot_exp_eval.py  plot_feedback.py  plot_stat.py  plot_suite.py  plot_tag_perf.py  plot_upsample.py
result_data/: README.md  active_learning_result.csv  dev_result.csv  kws_influence.csv  label_tsne.csv  mat_abbr.csv  review_result.csv  unlabel_tsne.csv  upsample_result.csv
tagc/: __main__.py  cal_thresh.py  cleaner.py  data_pipe.py  data_utils.py  dataset.py  domain.py  evaluation.py  io_utils.py  make_ds.py  make_figs.py  mask_explain.py  model.py  review.py  run.py  train.py  validation.py  visualization.py  visulisation.py  web.py  web_utils.py
tests/: test_cleaner.py  test_data_pipe.py  test_data_utils.py  test_pred.py  test_tagc.py
uml/: active_learning.pu  agree.pu  data_used.pu  dev.pu  pred_aug.pu  text_aug.pu  timeline.pu
