[tool.poetry]
name = "tagC"
version = "0.1.0"
description = ""
authors = ["Kiyoshi Mu <mooyewtsing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38

[testenv]
whitelist_externals = poetry
commands =
    poetry install -vvv
    poetry run pytest --cov-report=term --cov-report=xml --cov=nlp_db tests/

"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
